fix spacing issues

--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -39,7 +39,6 @@ h4 {
 
 .section-title {
   width: 100%;
-  max-width: 1080px;
   margin: 0 auto;
   h2 {
     text-align: left;
