--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,6 +10,8 @@
   @include mixins.medium-screen {
     @include mixins.flexbox(row-reverse, flex-start, center);
     box-sizing: border-box;
+    position: relative;
+    top: 40px;
     height: 114px;
     padding-top: variables.$spacing-xxl;
     padding-right: variables.$spacing-section;
